# web-of-web-trust

./: Dockerfile  README.md  docker-compose.yml  main.py  manage.py  openapi-prelimaniry.json  pyproject.toml  scrape.py
HTML Popup/: popupdesign.html
backend/: .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker.sh  manage.py  pyproject.toml  requirements.txt  scope.md
backend/api/: __init__.py  models.py
backend/api/db/: __init__.py  config.py  env.py  init.py  ruegen.py  schema.py
backend/api/db/versions/: 047e20f1db3c_add_hash_field_to_domains.py  0850e4e07b03_rename_aktenzeichen_identifier_on_.py  208246967ec0_add_basic_tables.py  25d1ce17df26_add_basic_tables.py  2603a6ae29dc_renew_layout.py  36f375a36286_change_hash_field_to_unlimited.py  3f7082264564_hange_hash_field_x3.py  59b0eb4ea3b7_fix_typo.py  5e4c3e6677e7_add_ziffer_to_ruegen.py  a9e58a481ef3_add_domain_field_to_ruegen_table.py  b6f990ccf97d_fix_typo.py  cae261c4805c_hange_hash_field_x2.py  d494da800c29_change_identifier_structure_for_ruegen_.py  d6b592f61073_add_ziffer_to_ruegen.py  f4db654a6835_change_primary_key_for_ruege_table_id_.py
backend/api/domains/: models.py  routes.py
backend/api/ruegen/: models.py  routes.py
backend/api/tests/: test_domain.py
backend/api/utility/: dependencies.py  routes.py
go-scraper/: .gitignore  Dockerfile  config.json  go.mod  go.sum  main.go
go-scraper/lib/: api.go  scraping.go
ruegen-scraper/: main.py  old-scraper.py  requirements.txt  ruege-scraper.py
